--- a/AircraftManager.ui
+++ b/AircraftManager.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>774</height>
+    <width>809</width>
+    <height>566</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,9 +17,9 @@
    <widget class="QGroupBox" name="groupBox">
     <property name="geometry">
      <rect>
-      <x>100</x>
-      <y>180</y>
-      <width>491</width>
+      <x>250</x>
+      <y>120</y>
+      <width>321</width>
       <height>291</height>
      </rect>
     </property>
@@ -29,16 +29,21 @@
      </font>
     </property>
     <property name="title">
-     <string>Aircraft Manager</string>
+     <string>Go to:</string>
     </property>
     <widget class="QPushButton" name="aircraftBtn">
      <property name="geometry">
       <rect>
-       <x>130</x>
-       <y>100</y>
-       <width>150</width>
-       <height>30</height>
+       <x>70</x>
+       <y>70</y>
+       <width>181</width>
+       <height>61</height>
       </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>11</pointsize>
+      </font>
      </property>
      <property name="text">
       <string>Aircraft</string>
@@ -47,61 +52,59 @@
     <widget class="QPushButton" name="aircraftTypebtn">
      <property name="geometry">
       <rect>
-       <x>130</x>
-       <y>160</y>
-       <width>150</width>
-       <height>30</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>Aircraft Type</string>
-     </property>
-    </widget>
-    <widget class="QLabel" name="label">
-     <property name="geometry">
-      <rect>
-       <x>170</x>
-       <y>60</y>
-       <width>191</width>
-       <height>41</height>
+       <x>70</x>
+       <y>170</y>
+       <width>181</width>
+       <height>61</height>
       </rect>
      </property>
      <property name="font">
       <font>
-       <pointsize>12</pointsize>
-       <weight>75</weight>
-       <bold>true</bold>
+       <pointsize>11</pointsize>
       </font>
      </property>
      <property name="text">
-      <string/>
-     </property>
-    </widget>
-    <widget class="QLabel" name="label_5">
-     <property name="geometry">
-      <rect>
-       <x>70</x>
-       <y>50</y>
-       <width>61</width>
-       <height>31</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>Go to:</string>
+      <string>Aircraft Type</string>
      </property>
     </widget>
    </widget>
    <widget class="QPushButton" name="amBack">
     <property name="geometry">
      <rect>
-      <x>590</x>
-      <y>490</y>
+      <x>480</x>
+      <y>430</y>
       <width>93</width>
       <height>28</height>
      </rect>
     </property>
+    <property name="font">
+     <font>
+      <pointsize>9</pointsize>
+     </font>
+    </property>
     <property name="text">
      <string>Back</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_4">
+    <property name="geometry">
+     <rect>
+      <x>320</x>
+      <y>60</y>
+      <width>191</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Berlin Sans FB Demi</family>
+      <pointsize>17</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="text">
+     <string>Aircraft Manager</string>
     </property>
    </widget>
   </widget>
@@ -110,8 +113,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>800</width>
-     <height>26</height>
+     <width>809</width>
+     <height>21</height>
     </rect>
    </property>
   </widget>
