--- a/FlightManager.ui
+++ b/FlightManager.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>600</height>
+    <width>826</width>
+    <height>567</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,9 +17,9 @@
    <widget class="QGroupBox" name="groupBox">
     <property name="geometry">
      <rect>
-      <x>100</x>
-      <y>90</y>
-      <width>481</width>
+      <x>270</x>
+      <y>100</y>
+      <width>311</width>
       <height>341</height>
      </rect>
     </property>
@@ -29,16 +29,21 @@
      </font>
     </property>
     <property name="title">
-     <string>Flight Manager</string>
+     <string>Go to:</string>
     </property>
     <widget class="QPushButton" name="FlightBtn">
      <property name="geometry">
       <rect>
-       <x>100</x>
-       <y>90</y>
-       <width>150</width>
-       <height>30</height>
+       <x>70</x>
+       <y>60</y>
+       <width>171</width>
+       <height>61</height>
       </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>11</pointsize>
+      </font>
      </property>
      <property name="text">
       <string>Flight</string>
@@ -47,11 +52,16 @@
     <widget class="QPushButton" name="TypeBtn">
      <property name="geometry">
       <rect>
-       <x>100</x>
+       <x>70</x>
        <y>150</y>
-       <width>150</width>
-       <height>30</height>
+       <width>171</width>
+       <height>61</height>
       </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>11</pointsize>
+      </font>
      </property>
      <property name="text">
       <string>Flight Type</string>
@@ -60,41 +70,59 @@
     <widget class="QPushButton" name="StatusBtn">
      <property name="geometry">
       <rect>
-       <x>100</x>
-       <y>210</y>
-       <width>150</width>
-       <height>30</height>
+       <x>70</x>
+       <y>240</y>
+       <width>171</width>
+       <height>61</height>
       </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>11</pointsize>
+      </font>
      </property>
      <property name="text">
       <string>Flight Status</string>
-     </property>
-    </widget>
-    <widget class="QLabel" name="label">
-     <property name="geometry">
-      <rect>
-       <x>50</x>
-       <y>50</y>
-       <width>61</width>
-       <height>21</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>Go to:</string>
      </property>
     </widget>
    </widget>
    <widget class="QPushButton" name="FMBackBtn">
     <property name="geometry">
      <rect>
-      <x>430</x>
-      <y>440</y>
-      <width>150</width>
-      <height>30</height>
+      <x>480</x>
+      <y>450</y>
+      <width>101</width>
+      <height>31</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>9</pointsize>
+     </font>
     </property>
     <property name="text">
      <string>Back</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_4">
+    <property name="geometry">
+     <rect>
+      <x>350</x>
+      <y>40</y>
+      <width>171</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Berlin Sans FB Demi</family>
+      <pointsize>17</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="text">
+     <string>Flight Manager</string>
     </property>
    </widget>
   </widget>
@@ -103,8 +131,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>800</width>
-     <height>26</height>
+     <width>826</width>
+     <height>21</height>
     </rect>
    </property>
   </widget>
