--- a/GroundManager.ui
+++ b/GroundManager.ui
@@ -6,21 +6,60 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>496</width>
-    <height>390</height>
+    <width>811</width>
+    <height>568</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QGroupBox" name="GroundManager">
+   <widget class="QPushButton" name="GBackBtn">
     <property name="geometry">
      <rect>
-      <x>70</x>
+      <x>470</x>
+      <y>460</y>
+      <width>101</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>9</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Back</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_4">
+    <property name="geometry">
+     <rect>
+      <x>310</x>
       <y>40</y>
-      <width>361</width>
-      <height>211</height>
+      <width>191</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Berlin Sans FB Demi</family>
+      <pointsize>17</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="text">
+     <string>Ground Manager</string>
+    </property>
+   </widget>
+   <widget class="QGroupBox" name="groupBox">
+    <property name="geometry">
+     <rect>
+      <x>250</x>
+      <y>100</y>
+      <width>331</width>
+      <height>341</height>
      </rect>
     </property>
     <property name="font">
@@ -29,78 +68,62 @@
      </font>
     </property>
     <property name="title">
-     <string>Ground Manager</string>
+     <string>Go to:</string>
     </property>
-    <widget class="QLabel" name="label">
-     <property name="geometry">
-      <rect>
-       <x>50</x>
-       <y>30</y>
-       <width>55</width>
-       <height>16</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>Go to:</string>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="TerminalBtn">
-     <property name="geometry">
-      <rect>
-       <x>70</x>
-       <y>60</y>
-       <width>111</width>
-       <height>31</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>Terminal</string>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="RunwayBtn">
-     <property name="geometry">
-      <rect>
-       <x>70</x>
-       <y>110</y>
-       <width>111</width>
-       <height>31</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>Runway</string>
-     </property>
-    </widget>
     <widget class="QPushButton" name="GateBtn">
      <property name="geometry">
       <rect>
-       <x>70</x>
-       <y>160</y>
-       <width>111</width>
-       <height>31</height>
+       <x>80</x>
+       <y>240</y>
+       <width>171</width>
+       <height>61</height>
       </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>11</pointsize>
+      </font>
      </property>
      <property name="text">
       <string>Gate</string>
      </property>
     </widget>
-   </widget>
-   <widget class="QPushButton" name="GBackBtn">
-    <property name="geometry">
-     <rect>
-      <x>340</x>
-      <y>280</y>
-      <width>93</width>
-      <height>28</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>10</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>Back</string>
-    </property>
+    <widget class="QPushButton" name="RunwayBtn">
+     <property name="geometry">
+      <rect>
+       <x>80</x>
+       <y>150</y>
+       <width>171</width>
+       <height>61</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>11</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>Runway</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="TerminalBtn">
+     <property name="geometry">
+      <rect>
+       <x>80</x>
+       <y>60</y>
+       <width>171</width>
+       <height>61</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>11</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>Terminal</string>
+     </property>
+    </widget>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
@@ -108,8 +131,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>496</width>
-     <height>26</height>
+     <width>811</width>
+     <height>21</height>
     </rect>
    </property>
   </widget>
