--- a/Runway.ui
+++ b/Runway.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>601</width>
-    <height>616</height>
+    <width>811</width>
+    <height>569</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,9 +17,9 @@
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>50</x>
-      <y>110</y>
-      <width>131</width>
+      <x>60</x>
+      <y>150</y>
+      <width>101</width>
       <height>41</height>
      </rect>
     </property>
@@ -35,9 +35,9 @@
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>50</x>
-      <y>160</y>
-      <width>121</width>
+      <x>60</x>
+      <y>200</y>
+      <width>101</width>
       <height>41</height>
      </rect>
     </property>
@@ -53,9 +53,9 @@
    <widget class="QLineEdit" name="RunwayNum">
     <property name="geometry">
      <rect>
-      <x>180</x>
-      <y>120</y>
-      <width>341</width>
+      <x>190</x>
+      <y>160</y>
+      <width>221</width>
       <height>22</height>
      </rect>
     </property>
@@ -71,9 +71,9 @@
    <widget class="QLineEdit" name="RunwayLen">
     <property name="geometry">
      <rect>
-      <x>180</x>
-      <y>170</y>
-      <width>341</width>
+      <x>190</x>
+      <y>210</y>
+      <width>221</width>
       <height>22</height>
      </rect>
     </property>
@@ -89,9 +89,9 @@
    <widget class="QPushButton" name="RDeleteBtn">
     <property name="geometry">
      <rect>
-      <x>430</x>
-      <y>240</y>
-      <width>93</width>
+      <x>220</x>
+      <y>400</y>
+      <width>151</width>
       <height>28</height>
      </rect>
     </property>
@@ -107,9 +107,9 @@
    <widget class="QPushButton" name="RAddBtn">
     <property name="geometry">
      <rect>
-      <x>310</x>
-      <y>240</y>
-      <width>93</width>
+      <x>220</x>
+      <y>250</y>
+      <width>151</width>
       <height>28</height>
      </rect>
     </property>
@@ -125,9 +125,9 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>50</x>
+      <x>310</x>
       <y>20</y>
-      <width>201</width>
+      <width>151</width>
       <height>71</height>
      </rect>
     </property>
@@ -143,9 +143,9 @@
    <widget class="QTableWidget" name="RunwayTable">
     <property name="geometry">
      <rect>
-      <x>150</x>
-      <y>300</y>
-      <width>381</width>
+      <x>450</x>
+      <y>150</y>
+      <width>321</width>
       <height>261</height>
      </rect>
     </property>
@@ -168,9 +168,9 @@
    <widget class="QPushButton" name="RBackBtn">
     <property name="geometry">
      <rect>
-      <x>200</x>
-      <y>240</y>
-      <width>93</width>
+      <x>540</x>
+      <y>430</y>
+      <width>151</width>
       <height>28</height>
      </rect>
     </property>
@@ -183,14 +183,50 @@
      <string>Back</string>
     </property>
    </widget>
+   <widget class="QLineEdit" name="DelRunwayNum">
+    <property name="geometry">
+     <rect>
+      <x>190</x>
+      <y>360</y>
+      <width>221</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_4">
+    <property name="geometry">
+     <rect>
+      <x>30</x>
+      <y>340</y>
+      <width>141</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Delete Runway Number:</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>601</width>
-     <height>26</height>
+     <width>811</width>
+     <height>21</height>
     </rect>
    </property>
   </widget>
