--- a/aircraft .ui
+++ b/aircraft .ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>580</height>
+    <width>997</width>
+    <height>583</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,8 +17,8 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>20</y>
+      <x>40</x>
+      <y>120</y>
       <width>81</width>
       <height>16</height>
      </rect>
@@ -30,9 +30,9 @@
    <widget class="QLineEdit" name="lineEdit">
     <property name="geometry">
      <rect>
-      <x>120</x>
-      <y>20</y>
-      <width>571</width>
+      <x>140</x>
+      <y>120</y>
+      <width>271</width>
       <height>22</height>
      </rect>
     </property>
@@ -43,8 +43,8 @@
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>70</y>
+      <x>40</x>
+      <y>160</y>
       <width>81</width>
       <height>16</height>
      </rect>
@@ -56,21 +56,21 @@
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>120</y>
+      <x>40</x>
+      <y>240</y>
       <width>91</width>
       <height>16</height>
      </rect>
     </property>
     <property name="text">
-     <string>Aircraft Type ID</string>
+     <string>Aircraft Type</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>170</y>
+      <x>50</x>
+      <y>200</y>
       <width>55</width>
       <height>16</height>
      </rect>
@@ -79,22 +79,12 @@
      <string>Capacity</string>
     </property>
    </widget>
-   <widget class="QComboBox" name="comboBox_3">
-    <property name="geometry">
-     <rect>
-      <x>120</x>
-      <y>70</y>
-      <width>571</width>
-      <height>22</height>
-     </rect>
-    </property>
-   </widget>
    <widget class="QLineEdit" name="lineEdit_2">
     <property name="geometry">
      <rect>
-      <x>120</x>
-      <y>170</y>
-      <width>571</width>
+      <x>140</x>
+      <y>200</y>
+      <width>271</width>
       <height>22</height>
      </rect>
     </property>
@@ -102,46 +92,23 @@
    <widget class="QLabel" name="label_5">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>220</y>
-      <width>55</width>
+      <x>40</x>
+      <y>280</y>
+      <width>71</width>
       <height>16</height>
      </rect>
     </property>
     <property name="text">
-     <string>Airline ID</string>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="lineEdit_3">
-    <property name="geometry">
-     <rect>
-      <x>120</x>
-      <y>210</y>
-      <width>571</width>
-      <height>22</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="lineEdit_4">
-    <property name="geometry">
-     <rect>
-      <x>120</x>
-      <y>120</y>
-      <width>571</width>
-      <height>22</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string/>
+     <string>Airline Name</string>
     </property>
    </widget>
    <widget class="QPushButton" name="pushButton_2">
     <property name="geometry">
      <rect>
-      <x>550</x>
-      <y>250</y>
-      <width>93</width>
-      <height>28</height>
+      <x>210</x>
+      <y>430</y>
+      <width>141</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="text">
@@ -151,10 +118,10 @@
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>450</x>
-      <y>250</y>
-      <width>93</width>
-      <height>28</height>
+      <x>210</x>
+      <y>330</y>
+      <width>141</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="text">
@@ -164,15 +131,127 @@
    <widget class="QPushButton" name="aircraftBack">
     <property name="geometry">
      <rect>
-      <x>660</x>
-      <y>250</y>
-      <width>93</width>
-      <height>28</height>
+      <x>640</x>
+      <y>420</y>
+      <width>141</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="text">
      <string>Back</string>
     </property>
+   </widget>
+   <widget class="QLabel" name="label_8">
+    <property name="geometry">
+     <rect>
+      <x>320</x>
+      <y>30</y>
+      <width>141</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>16</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Aircraft Details</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="lineEdit_5">
+    <property name="geometry">
+     <rect>
+      <x>140</x>
+      <y>160</y>
+      <width>271</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QComboBox" name="comboBox">
+    <property name="geometry">
+     <rect>
+      <x>140</x>
+      <y>240</y>
+      <width>271</width>
+      <height>22</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QComboBox" name="comboBox_2">
+    <property name="geometry">
+     <rect>
+      <x>140</x>
+      <y>280</y>
+      <width>271</width>
+      <height>22</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="lineEdit_3">
+    <property name="geometry">
+     <rect>
+      <x>150</x>
+      <y>390</y>
+      <width>271</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_6">
+    <property name="geometry">
+     <rect>
+      <x>50</x>
+      <y>390</y>
+      <width>81</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Tail Number</string>
+    </property>
+   </widget>
+   <widget class="QTableWidget" name="tableWidget">
+    <property name="geometry">
+     <rect>
+      <x>440</x>
+      <y>120</y>
+      <width>521</width>
+      <height>281</height>
+     </rect>
+    </property>
+    <column>
+     <property name="text">
+      <string>Tail Number</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>Aircraft Name</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>Capacity</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>Aircraft Type</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>Airline Name</string>
+     </property>
+    </column>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
@@ -180,8 +259,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>800</width>
-     <height>26</height>
+     <width>997</width>
+     <height>21</height>
     </rect>
    </property>
   </widget>
