--- a/airline.ui
+++ b/airline.ui
@@ -6,38 +6,20 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1113</width>
-    <height>804</height>
+    <width>809</width>
+    <height>571</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Airline</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QLabel" name="label">
-    <property name="geometry">
-     <rect>
-      <x>30</x>
-      <y>70</y>
-      <width>91</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>10</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>Airline-Id:</string>
-    </property>
-   </widget>
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>30</x>
-      <y>110</y>
-      <width>111</width>
+      <x>220</x>
+      <y>60</y>
+      <width>81</width>
       <height>31</height>
      </rect>
     </property>
@@ -53,9 +35,9 @@
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>30</x>
-      <y>140</y>
-      <width>121</width>
+      <x>210</x>
+      <y>100</y>
+      <width>91</width>
       <height>41</height>
      </rect>
     </property>
@@ -71,9 +53,9 @@
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
-      <x>30</x>
-      <y>180</y>
-      <width>91</width>
+      <x>260</x>
+      <y>140</y>
+      <width>41</width>
       <height>41</height>
      </rect>
     </property>
@@ -83,50 +65,14 @@
      </font>
     </property>
     <property name="text">
-     <string>Phone</string>
+     <string>Phone:</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_5">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>260</y>
-      <width>161</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>10</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>Headquarter Country</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_6">
-    <property name="geometry">
-     <rect>
-      <x>30</x>
+      <x>170</x>
       <y>220</y>
-      <width>91</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>10</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>Email</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_7">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>300</y>
       <width>131</width>
       <height>41</height>
      </rect>
@@ -137,16 +83,16 @@
      </font>
     </property>
     <property name="text">
-     <string>Headquarter City</string>
+     <string>Headquarter Country:</string>
     </property>
    </widget>
-   <widget class="QComboBox" name="comboBox_2">
+   <widget class="QLabel" name="label_6">
     <property name="geometry">
      <rect>
-      <x>180</x>
-      <y>110</y>
-      <width>571</width>
-      <height>22</height>
+      <x>260</x>
+      <y>180</y>
+      <width>41</width>
+      <height>41</height>
      </rect>
     </property>
     <property name="font">
@@ -154,28 +100,34 @@
       <pointsize>10</pointsize>
      </font>
     </property>
-    <item>
-     <property name="text">
-      <string>Delta Airlines</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>United Airlines</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>Emirates Airline</string>
-     </property>
-    </item>
+    <property name="text">
+     <string>Email:</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_7">
+    <property name="geometry">
+     <rect>
+      <x>200</x>
+      <y>260</y>
+      <width>101</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Headquarter City:</string>
+    </property>
    </widget>
    <widget class="QComboBox" name="comboBox_3">
     <property name="geometry">
      <rect>
-      <x>180</x>
-      <y>270</y>
-      <width>571</width>
+      <x>320</x>
+      <y>230</y>
+      <width>361</width>
       <height>22</height>
      </rect>
     </property>
@@ -184,28 +136,13 @@
       <pointsize>10</pointsize>
      </font>
     </property>
-    <item>
-     <property name="text">
-      <string>Russia</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>Germany</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>Morocco</string>
-     </property>
-    </item>
    </widget>
    <widget class="QComboBox" name="comboBox_4">
     <property name="geometry">
      <rect>
-      <x>180</x>
-      <y>310</y>
-      <width>571</width>
+      <x>320</x>
+      <y>270</y>
+      <width>361</width>
       <height>22</height>
      </rect>
     </property>
@@ -214,23 +151,13 @@
       <pointsize>10</pointsize>
      </font>
     </property>
-    <item>
-     <property name="text">
-      <string>Atlanta</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>Georgia</string>
-     </property>
-    </item>
    </widget>
    <widget class="QLineEdit" name="lineEdit">
     <property name="geometry">
      <rect>
-      <x>180</x>
-      <y>150</y>
-      <width>571</width>
+      <x>320</x>
+      <y>110</y>
+      <width>361</width>
       <height>22</height>
      </rect>
     </property>
@@ -238,9 +165,9 @@
    <widget class="QLineEdit" name="lineEdit_2">
     <property name="geometry">
      <rect>
-      <x>180</x>
-      <y>190</y>
-      <width>571</width>
+      <x>320</x>
+      <y>150</y>
+      <width>361</width>
       <height>22</height>
      </rect>
     </property>
@@ -248,19 +175,9 @@
    <widget class="QLineEdit" name="lineEdit_3">
     <property name="geometry">
      <rect>
-      <x>180</x>
-      <y>220</y>
-      <width>571</width>
-      <height>22</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="lineEdit_4">
-    <property name="geometry">
-     <rect>
-      <x>180</x>
-      <y>70</y>
-      <width>571</width>
+      <x>320</x>
+      <y>190</y>
+      <width>361</width>
       <height>22</height>
      </rect>
     </property>
@@ -268,11 +185,16 @@
    <widget class="QPushButton" name="addType">
     <property name="geometry">
      <rect>
-      <x>510</x>
-      <y>360</y>
+      <x>350</x>
+      <y>310</y>
       <width>93</width>
       <height>28</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>9</pointsize>
+     </font>
     </property>
     <property name="text">
      <string>Add</string>
@@ -281,11 +203,16 @@
    <widget class="QPushButton" name="deleteType">
     <property name="geometry">
      <rect>
-      <x>620</x>
-      <y>360</y>
+      <x>460</x>
+      <y>310</y>
       <width>93</width>
       <height>28</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>9</pointsize>
+     </font>
     </property>
     <property name="text">
      <string>Delete</string>
@@ -294,41 +221,114 @@
    <widget class="QPushButton" name="addAircraft_2">
     <property name="geometry">
      <rect>
-      <x>730</x>
-      <y>360</y>
+      <x>570</x>
+      <y>310</y>
       <width>93</width>
       <height>28</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>9</pointsize>
+     </font>
     </property>
     <property name="text">
      <string>Back</string>
     </property>
    </widget>
-   <zorder>label</zorder>
+   <widget class="QTableWidget" name="tableWidget">
+    <property name="geometry">
+     <rect>
+      <x>50</x>
+      <y>360</y>
+      <width>691</width>
+      <height>151</height>
+     </rect>
+    </property>
+    <column>
+     <property name="text">
+      <string>Airline Name</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>Conatct Person</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>Phone</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>Email</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>HQ Country</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>HQ City</string>
+     </property>
+    </column>
+   </widget>
+   <widget class="QLabel" name="label_8">
+    <property name="geometry">
+     <rect>
+      <x>330</x>
+      <y>10</y>
+      <width>131</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>16</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Airline Details</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="lineEdit_4">
+    <property name="geometry">
+     <rect>
+      <x>320</x>
+      <y>70</y>
+      <width>361</width>
+      <height>22</height>
+     </rect>
+    </property>
+   </widget>
    <zorder>label_3</zorder>
    <zorder>label_2</zorder>
    <zorder>label_4</zorder>
    <zorder>label_5</zorder>
    <zorder>label_6</zorder>
    <zorder>label_7</zorder>
-   <zorder>comboBox_2</zorder>
    <zorder>comboBox_3</zorder>
    <zorder>comboBox_4</zorder>
    <zorder>lineEdit</zorder>
    <zorder>lineEdit_2</zorder>
    <zorder>lineEdit_3</zorder>
-   <zorder>lineEdit_4</zorder>
    <zorder>addType</zorder>
    <zorder>deleteType</zorder>
    <zorder>addAircraft_2</zorder>
+   <zorder>tableWidget</zorder>
+   <zorder>label_8</zorder>
+   <zorder>lineEdit_4</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1113</width>
-     <height>26</height>
+     <width>809</width>
+     <height>21</height>
     </rect>
    </property>
   </widget>
