--- a/airportManager.ui
+++ b/airportManager.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>600</height>
+    <width>812</width>
+    <height>567</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,10 +17,10 @@
    <widget class="QGroupBox" name="groupBox">
     <property name="geometry">
      <rect>
-      <x>130</x>
-      <y>70</y>
-      <width>551</width>
-      <height>211</height>
+      <x>270</x>
+      <y>120</y>
+      <width>311</width>
+      <height>271</height>
      </rect>
     </property>
     <property name="font">
@@ -29,16 +29,21 @@
      </font>
     </property>
     <property name="title">
-     <string>Airport Manager</string>
+     <string>Go to:</string>
     </property>
     <widget class="QPushButton" name="airlineBtn">
      <property name="geometry">
       <rect>
-       <x>140</x>
+       <x>70</x>
        <y>60</y>
-       <width>150</width>
-       <height>30</height>
+       <width>171</width>
+       <height>61</height>
       </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>11</pointsize>
+      </font>
      </property>
      <property name="text">
       <string>Airline</string>
@@ -47,41 +52,59 @@
     <widget class="QPushButton" name="airportBtn">
      <property name="geometry">
       <rect>
-       <x>140</x>
-       <y>110</y>
-       <width>150</width>
-       <height>30</height>
+       <x>70</x>
+       <y>160</y>
+       <width>171</width>
+       <height>61</height>
       </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>11</pointsize>
+      </font>
      </property>
      <property name="text">
       <string>Airport</string>
-     </property>
-    </widget>
-    <widget class="QLabel" name="label_2">
-     <property name="geometry">
-      <rect>
-       <x>50</x>
-       <y>30</y>
-       <width>61</width>
-       <height>21</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>Go to:</string>
      </property>
     </widget>
    </widget>
    <widget class="QPushButton" name="airportManagerBack">
     <property name="geometry">
      <rect>
-      <x>490</x>
-      <y>290</y>
-      <width>150</width>
+      <x>450</x>
+      <y>410</y>
+      <width>131</width>
       <height>30</height>
      </rect>
     </property>
+    <property name="font">
+     <font>
+      <pointsize>9</pointsize>
+     </font>
+    </property>
     <property name="text">
      <string>Back</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_4">
+    <property name="geometry">
+     <rect>
+      <x>330</x>
+      <y>40</y>
+      <width>191</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Berlin Sans FB Demi</family>
+      <pointsize>17</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="text">
+     <string>Airport Manager</string>
     </property>
    </widget>
   </widget>
@@ -90,8 +113,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>800</width>
-     <height>26</height>
+     <width>812</width>
+     <height>21</height>
     </rect>
    </property>
   </widget>
