--- a/flight.ui
+++ b/flight.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1185</width>
-    <height>598</height>
+    <width>1311</width>
+    <height>613</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -287,30 +287,12 @@
      <string>IsDomestic:</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_2">
-    <property name="geometry">
-     <rect>
-      <x>260</x>
-      <y>510</y>
-      <width>93</width>
-      <height>28</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>9</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>Delete</string>
-    </property>
-   </widget>
    <widget class="QPushButton" name="flightBack">
     <property name="geometry">
      <rect>
-      <x>370</x>
+      <x>380</x>
       <y>510</y>
-      <width>93</width>
+      <width>131</width>
       <height>28</height>
      </rect>
     </property>
@@ -326,9 +308,9 @@
    <widget class="QPushButton" name="flightAddBtn">
     <property name="geometry">
      <rect>
-      <x>150</x>
+      <x>110</x>
       <y>510</y>
-      <width>93</width>
+      <width>121</width>
       <height>28</height>
      </rect>
     </property>
@@ -503,15 +485,20 @@
      <string>Flight Details</string>
     </property>
    </widget>
-   <widget class="QTableWidget" name="tableWidget">
+   <widget class="QTableWidget" name="FDtable">
     <property name="geometry">
      <rect>
       <x>530</x>
       <y>60</y>
-      <width>611</width>
+      <width>761</width>
       <height>391</height>
      </rect>
     </property>
+    <column>
+     <property name="text">
+      <string>Flight ID</string>
+     </property>
+    </column>
     <column>
      <property name="text">
       <string>Flight Number</string>
@@ -573,13 +560,31 @@
      </property>
     </column>
    </widget>
+   <widget class="QPushButton" name="flightView">
+    <property name="geometry">
+     <rect>
+      <x>240</x>
+      <y>510</y>
+      <width>131</width>
+      <height>28</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>9</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>View</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1185</width>
+     <width>1311</width>
      <height>21</height>
     </rect>
    </property>
