--- a/aircraft .ui
+++ b/aircraft .ui
@@ -27,7 +27,7 @@
      <string>Tail Number</string>
     </property>
    </widget>
-   <widget class="QLineEdit" name="lineEdit">
+   <widget class="QLineEdit" name="TailNumber">
     <property name="geometry">
      <rect>
       <x>140</x>
@@ -79,7 +79,7 @@
      <string>Capacity</string>
     </property>
    </widget>
-   <widget class="QLineEdit" name="lineEdit_2">
+   <widget class="QLineEdit" name="Capacity">
     <property name="geometry">
      <rect>
       <x>140</x>
@@ -102,7 +102,7 @@
      <string>Airline Name</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_2">
+   <widget class="QPushButton" name="ADdel">
     <property name="geometry">
      <rect>
       <x>210</x>
@@ -115,7 +115,7 @@
      <string>Delete</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton">
+   <widget class="QPushButton" name="ADadd">
     <property name="geometry">
      <rect>
       <x>210</x>
@@ -131,7 +131,7 @@
    <widget class="QPushButton" name="aircraftBack">
     <property name="geometry">
      <rect>
-      <x>640</x>
+      <x>720</x>
       <y>420</y>
       <width>141</width>
       <height>31</height>
@@ -159,7 +159,7 @@
      <string>Aircraft Details</string>
     </property>
    </widget>
-   <widget class="QLineEdit" name="lineEdit_5">
+   <widget class="QLineEdit" name="Name">
     <property name="geometry">
      <rect>
       <x>140</x>
@@ -172,7 +172,7 @@
      <string/>
     </property>
    </widget>
-   <widget class="QComboBox" name="comboBox">
+   <widget class="QComboBox" name="AircraftTypeID">
     <property name="geometry">
      <rect>
       <x>140</x>
@@ -182,7 +182,7 @@
      </rect>
     </property>
    </widget>
-   <widget class="QComboBox" name="comboBox_2">
+   <widget class="QComboBox" name="AirlineId">
     <property name="geometry">
      <rect>
       <x>140</x>
@@ -192,7 +192,7 @@
      </rect>
     </property>
    </widget>
-   <widget class="QLineEdit" name="lineEdit_3">
+   <widget class="QLineEdit" name="delTailNum">
     <property name="geometry">
      <rect>
       <x>150</x>
@@ -218,7 +218,7 @@
      <string>Tail Number</string>
     </property>
    </widget>
-   <widget class="QTableWidget" name="tableWidget">
+   <widget class="QTableWidget" name="ADtable">
     <property name="geometry">
      <rect>
       <x>440</x>
@@ -252,6 +252,19 @@
       <string>Airline Name</string>
      </property>
     </column>
+   </widget>
+   <widget class="QPushButton" name="aircraftView">
+    <property name="geometry">
+     <rect>
+      <x>560</x>
+      <y>420</y>
+      <width>141</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>View</string>
+    </property>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
