--- a/airline.ui
+++ b/airline.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>809</width>
-    <height>571</height>
+    <width>1241</width>
+    <height>625</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,8 +17,8 @@
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>220</x>
-      <y>60</y>
+      <x>80</x>
+      <y>90</y>
       <width>81</width>
       <height>31</height>
      </rect>
@@ -35,8 +35,8 @@
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>210</x>
-      <y>100</y>
+      <x>70</x>
+      <y>130</y>
       <width>91</width>
       <height>41</height>
      </rect>
@@ -53,8 +53,8 @@
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
-      <x>260</x>
-      <y>140</y>
+      <x>120</x>
+      <y>170</y>
       <width>41</width>
       <height>41</height>
      </rect>
@@ -71,8 +71,8 @@
    <widget class="QLabel" name="label_5">
     <property name="geometry">
      <rect>
-      <x>170</x>
-      <y>220</y>
+      <x>30</x>
+      <y>250</y>
       <width>131</width>
       <height>41</height>
      </rect>
@@ -89,8 +89,8 @@
    <widget class="QLabel" name="label_6">
     <property name="geometry">
      <rect>
-      <x>260</x>
-      <y>180</y>
+      <x>120</x>
+      <y>210</y>
       <width>41</width>
       <height>41</height>
      </rect>
@@ -107,8 +107,8 @@
    <widget class="QLabel" name="label_7">
     <property name="geometry">
      <rect>
-      <x>200</x>
-      <y>260</y>
+      <x>50</x>
+      <y>290</y>
       <width>101</width>
       <height>41</height>
      </rect>
@@ -122,12 +122,12 @@
      <string>Headquarter City:</string>
     </property>
    </widget>
-   <widget class="QComboBox" name="comboBox_3">
+   <widget class="QComboBox" name="HQCountry">
     <property name="geometry">
      <rect>
-      <x>320</x>
-      <y>230</y>
-      <width>361</width>
+      <x>180</x>
+      <y>260</y>
+      <width>291</width>
       <height>22</height>
      </rect>
     </property>
@@ -137,12 +137,12 @@
      </font>
     </property>
    </widget>
-   <widget class="QComboBox" name="comboBox_4">
+   <widget class="QComboBox" name="HQCity">
     <property name="geometry">
      <rect>
-      <x>320</x>
-      <y>270</y>
-      <width>361</width>
+      <x>180</x>
+      <y>300</y>
+      <width>291</width>
       <height>22</height>
      </rect>
     </property>
@@ -152,43 +152,43 @@
      </font>
     </property>
    </widget>
-   <widget class="QLineEdit" name="lineEdit">
+   <widget class="QLineEdit" name="ContactPerson">
     <property name="geometry">
      <rect>
-      <x>320</x>
-      <y>110</y>
-      <width>361</width>
+      <x>180</x>
+      <y>140</y>
+      <width>291</width>
       <height>22</height>
      </rect>
     </property>
    </widget>
-   <widget class="QLineEdit" name="lineEdit_2">
+   <widget class="QLineEdit" name="Phone">
     <property name="geometry">
      <rect>
-      <x>320</x>
-      <y>150</y>
-      <width>361</width>
+      <x>180</x>
+      <y>180</y>
+      <width>291</width>
       <height>22</height>
      </rect>
     </property>
    </widget>
-   <widget class="QLineEdit" name="lineEdit_3">
+   <widget class="QLineEdit" name="Email">
     <property name="geometry">
      <rect>
-      <x>320</x>
-      <y>190</y>
-      <width>361</width>
+      <x>180</x>
+      <y>220</y>
+      <width>291</width>
       <height>22</height>
      </rect>
     </property>
    </widget>
-   <widget class="QPushButton" name="addType">
+   <widget class="QPushButton" name="addAirline">
     <property name="geometry">
      <rect>
-      <x>350</x>
-      <y>310</y>
-      <width>93</width>
-      <height>28</height>
+      <x>260</x>
+      <y>350</y>
+      <width>161</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="font">
@@ -200,13 +200,13 @@
      <string>Add</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="deleteType">
+   <widget class="QPushButton" name="deleteAirline">
     <property name="geometry">
      <rect>
-      <x>460</x>
-      <y>310</y>
-      <width>93</width>
-      <height>28</height>
+      <x>250</x>
+      <y>470</y>
+      <width>161</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="font">
@@ -221,10 +221,10 @@
    <widget class="QPushButton" name="addAircraft_2">
     <property name="geometry">
      <rect>
-      <x>570</x>
-      <y>310</y>
-      <width>93</width>
-      <height>28</height>
+      <x>870</x>
+      <y>410</y>
+      <width>171</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="font">
@@ -236,15 +236,20 @@
      <string>Back</string>
     </property>
    </widget>
-   <widget class="QTableWidget" name="tableWidget">
+   <widget class="QTableWidget" name="AirlineTable">
     <property name="geometry">
      <rect>
-      <x>50</x>
-      <y>360</y>
-      <width>691</width>
-      <height>151</height>
+      <x>500</x>
+      <y>110</y>
+      <width>721</width>
+      <height>271</height>
      </rect>
     </property>
+    <column>
+     <property name="text">
+      <string>Ariline ID</string>
+     </property>
+    </column>
     <column>
      <property name="text">
       <string>Airline Name</string>
@@ -294,14 +299,63 @@
      <string>Airline Details</string>
     </property>
    </widget>
-   <widget class="QLineEdit" name="lineEdit_4">
+   <widget class="QLineEdit" name="AirlineName">
     <property name="geometry">
      <rect>
-      <x>320</x>
-      <y>70</y>
-      <width>361</width>
+      <x>180</x>
+      <y>100</y>
+      <width>291</width>
       <height>22</height>
      </rect>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="delAirline">
+    <property name="geometry">
+     <rect>
+      <x>180</x>
+      <y>430</y>
+      <width>291</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_9">
+    <property name="geometry">
+     <rect>
+      <x>50</x>
+      <y>430</y>
+      <width>121</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Delete Airline Name:</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="viewAircraftBtn">
+    <property name="geometry">
+     <rect>
+      <x>690</x>
+      <y>410</y>
+      <width>171</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>9</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>View</string>
     </property>
    </widget>
    <zorder>label_3</zorder>
@@ -310,24 +364,27 @@
    <zorder>label_5</zorder>
    <zorder>label_6</zorder>
    <zorder>label_7</zorder>
-   <zorder>comboBox_3</zorder>
-   <zorder>comboBox_4</zorder>
-   <zorder>lineEdit</zorder>
-   <zorder>lineEdit_2</zorder>
-   <zorder>lineEdit_3</zorder>
-   <zorder>addType</zorder>
-   <zorder>deleteType</zorder>
+   <zorder>HQCountry</zorder>
+   <zorder>HQCity</zorder>
+   <zorder>ContactPerson</zorder>
+   <zorder>Phone</zorder>
+   <zorder>Email</zorder>
+   <zorder>addAirline</zorder>
+   <zorder>deleteAirline</zorder>
    <zorder>addAircraft_2</zorder>
-   <zorder>tableWidget</zorder>
+   <zorder>AirlineTable</zorder>
    <zorder>label_8</zorder>
-   <zorder>lineEdit_4</zorder>
+   <zorder>AirlineName</zorder>
+   <zorder>delAirline</zorder>
+   <zorder>label_9</zorder>
+   <zorder>viewAircraftBtn</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>809</width>
+     <width>1241</width>
      <height>21</height>
     </rect>
    </property>
