--- a/flight status .ui
+++ b/flight status .ui
@@ -32,7 +32,7 @@
      <string>Flight Status:</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_2">
+   <widget class="QPushButton" name="DelFlightS">
     <property name="geometry">
      <rect>
       <x>230</x>
@@ -71,7 +71,7 @@
    <widget class="QPushButton" name="flightStatusBack">
     <property name="geometry">
      <rect>
-      <x>540</x>
+      <x>610</x>
       <y>390</y>
       <width>121</width>
       <height>31</height>
@@ -119,7 +119,7 @@
      <string>Flight Status Details</string>
     </property>
    </widget>
-   <widget class="QLineEdit" name="FlightStatus_2">
+   <widget class="QLineEdit" name="deleteFS">
     <property name="geometry">
      <rect>
       <x>180</x>
@@ -155,7 +155,7 @@
      <string>Delete Flight Status:</string>
     </property>
    </widget>
-   <widget class="QTableWidget" name="tableWidget">
+   <widget class="QTableWidget" name="FStable">
     <property name="geometry">
      <rect>
       <x>470</x>
@@ -174,6 +174,24 @@
       <string>Flight Status</string>
      </property>
     </column>
+   </widget>
+   <widget class="QPushButton" name="flightStatusView">
+    <property name="geometry">
+     <rect>
+      <x>480</x>
+      <y>390</y>
+      <width>121</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>9</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>View</string>
+    </property>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
