--- a/gate.ui
+++ b/gate.ui
@@ -119,7 +119,7 @@
    <widget class="QPushButton" name="GBackBtn">
     <property name="geometry">
      <rect>
-      <x>590</x>
+      <x>650</x>
       <y>390</y>
       <width>121</width>
       <height>28</height>
@@ -160,6 +160,24 @@
       <width>251</width>
       <height>22</height>
      </rect>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="GViewBtn">
+    <property name="geometry">
+     <rect>
+      <x>520</x>
+      <y>390</y>
+      <width>121</width>
+      <height>28</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>View</string>
     </property>
    </widget>
   </widget>
