--- a/terminal.ui
+++ b/terminal.ui
@@ -60,7 +60,7 @@
      <rect>
       <x>480</x>
       <y>150</y>
-      <width>221</width>
+      <width>271</width>
       <height>241</height>
      </rect>
     </property>
@@ -114,7 +114,7 @@
    <widget class="QPushButton" name="TBackBtn">
     <property name="geometry">
      <rect>
-      <x>540</x>
+      <x>630</x>
       <y>410</y>
       <width>121</width>
       <height>28</height>
@@ -165,6 +165,24 @@
       <width>221</width>
       <height>20</height>
      </rect>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="TViewBtn">
+    <property name="geometry">
+     <rect>
+      <x>500</x>
+      <y>410</y>
+      <width>121</width>
+      <height>28</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>View</string>
     </property>
    </widget>
   </widget>
