--- a/AircraftManager.ui
+++ b/AircraftManager.ui
@@ -107,6 +107,24 @@
      <string>Aircraft Manager</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="aircraftReport">
+    <property name="geometry">
+     <rect>
+      <x>370</x>
+      <y>430</y>
+      <width>93</width>
+      <height>28</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>9</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>View Report</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
@@ -114,7 +132,7 @@
      <x>0</x>
      <y>0</y>
      <width>809</width>
-     <height>21</height>
+     <height>26</height>
     </rect>
    </property>
   </widget>
